<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <scm>
        <connection>scm:git:git@github.com:athingx/athing-thing-tunnel.git</connection>
        <developerConnection>scm:git:git@github.com:athingx/athing-thing-tunnel.git</developerConnection>
        <url>https://github.com/athingx/athing-thing-tunnel</url>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <id>vlinux</id>
            <name>vlinux</name>
            <email>oldmanpushcart@gmail.com</email>
        </developer>
    </developers>

    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.athingx.athing.thing.tunnel</groupId>
    <artifactId>athing-thing-tunnel</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <name>${project.artifactId}</name>
    <description>athing thing component: tunnel</description>
    <url>https://github.com/athingx/athing-thing-tunnel</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>1.0.0-SNAPSHOT</revision>
        <athing.version>1.0.0-SNAPSHOT</athing.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>thing-tunnel</module>
        <module>thing-tunnel-aliyun</module>
        <module>thing-tunnel-aliyun-core</module>
  </modules>
</project>
